--- a/Common/CommonAsync/CommonAsync.csproj
+++ b/Common/CommonAsync/CommonAsync.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ReaderWriterLockSlimExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafeInvokeExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
