--- a/Common/UnitTestCommonMath/UnitTestCommonMath.csproj
+++ b/Common/UnitTestCommonMath/UnitTestCommonMath.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UTLongestLong.cs" />
     <Compile Include="UTNumberInRange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
