--- a/Common/UnitTestCommonAsync/UnitTestCommonAsync.csproj
+++ b/Common/UnitTestCommonAsync/UnitTestCommonAsync.csproj
@@ -53,6 +53,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommonAsync\CommonAsync.csproj">
+      <Project>{7a20abeb-acf6-4138-a980-cf6a7cc01fc0}</Project>
+      <Name>CommonAsync</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
