--- a/Common/UnitTestCommonSerialization/UnitTestCommonSerialization.csproj
+++ b/Common/UnitTestCommonSerialization/UnitTestCommonSerialization.csproj
@@ -49,9 +49,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommonSerialization\CommonSerialization.csproj">
+      <Project>{b59e12da-4a12-45a0-8570-5419abf14668}</Project>
+      <Name>CommonSerialization</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
