--- a/Common/CommonMath/CommonMath.csproj
+++ b/Common/CommonMath/CommonMath.csproj
@@ -46,6 +46,7 @@
     <Compile Include="INumberInRange.cs" />
     <Compile Include="INumeric.cs" />
     <Compile Include="LongestLong.cs" />
+    <Compile Include="Matrix.cs" />
     <Compile Include="NumberInRange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
