--- a/Common/CommonData/CommonData.csproj
+++ b/Common/CommonData/CommonData.csproj
@@ -45,10 +45,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Serialization\JSONSerialization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serialization\BinarySerialization.cs" />
     <Compile Include="Serialization\Extensions\BinarySerializationExt.cs" />
     <Compile Include="Serialization\Extensions\JSONSerializationExt.cs" />
     <Compile Include="Serialization\Extensions\XMLSerializationExt.cs" />
+    <Compile Include="Serialization\XMLSerialization.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
