--- a/Common/CommonAsync/CommonAsync.csproj
+++ b/Common/CommonAsync/CommonAsync.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileMan.cs" />
     <Compile Include="ReaderWriterLockSlimExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SafeInvokeExtensions.cs" />
