--- a/Common/UnitTestCommonMath/UnitTestCommonMath.csproj
+++ b/Common/UnitTestCommonMath/UnitTestCommonMath.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UtUniversalNumericOperation.cs" />
     <Compile Include="UtLongestLong.cs" />
     <Compile Include="UtMatrix.cs" />
     <Compile Include="UtNumberInRange.cs" />
