--- a/Common/UnitTestCommonData/UnitTestCommonData.csproj
+++ b/Common/UnitTestCommonData/UnitTestCommonData.csproj
@@ -50,6 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtTrie.cs" />
+    <Compile Include="UtPatternFinder.cs" />
     <Compile Include="UtSerialization.cs" />
   </ItemGroup>
   <ItemGroup>
