I'm too lazy to make a proper description of this commit

--- a/Common/CommonData/CommonData.csproj
+++ b/Common/CommonData/CommonData.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DFA.cs" />
+    <Compile Include="Dfa.cs" />
     <Compile Include="DfaMinimizer.cs" />
     <Compile Include="PatternFinder.cs" />
     <Compile Include="FileMan.cs" />
