--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,3 @@
-variables:
-    - nuget: 'C:\GitLab-Runner\nuget.exe'
-
 stages:
   - build
 
@@ -9,7 +6,7 @@ build_job:
   script:
   - ls Common
   - 'echo restoring nuget...'
-  - '%nuget% restore Common\Common.sln'
+  - 'nuget restore Common\Common.sln'
   - 'echo building...'
   - 'msbuild Common\Common.sln /p:Configuration=Debug /p:Platform="Any CPU"'
   except:
