--- a/Common/CommonMath/CommonMath.csproj
+++ b/Common/CommonMath/CommonMath.csproj
@@ -45,12 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseMatrix.cs" />
-    <Compile Include="IMatrix.cs" />
+    <Compile Include="Matricies\BaseMatrix.cs" />
+    <Compile Include="Matricies\IMatrix.cs" />
     <Compile Include="INumberInRange.cs" />
     <Compile Include="LongestLong.cs" />
-    <Compile Include="Matrix.cs" />
-    <Compile Include="ModuloMatrix.cs" />
+    <Compile Include="Matricies\Matrix.cs" />
+    <Compile Include="Matricies\ModuloMatrix.cs" />
     <Compile Include="NumberInRange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniversalNumericOperation.cs" />
