--- a/Common/UnitTestCommonData/UnitTestCommonData.csproj
+++ b/Common/UnitTestCommonData/UnitTestCommonData.csproj
@@ -51,8 +51,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\DataDfaMinimizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UtTrie.cs" />
+    <Compile Include="UtDfaMinimizer.cs" />
     <Compile Include="UtPatternFinder.cs" />
     <Compile Include="UtSerialization.cs" />
   </ItemGroup>
@@ -69,6 +70,7 @@
       <Name>UnitTestConstants</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
