--- a/Common/CommonLinq/CommonLinq.csproj
+++ b/Common/CommonLinq/CommonLinq.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{81093710-85F5-4D6D-BE15-A9A23EF20A2A}</ProjectGuid>
+    <ProjectGuid>{32F7F676-B4BB-4656-9E3A-88191B0C2383}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Common.Data</RootNamespace>
-    <AssemblyName>CommonData</AssemblyName>
+    <RootNamespace>Common.Linq</RootNamespace>
+    <AssemblyName>CommonLinq</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,12 +29,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,23 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dfa.cs" />
-    <Compile Include="DfaMinimizer.cs" />
-    <Compile Include="PatternFinder.cs" />
-    <Compile Include="FileMan.cs" />
+    <Compile Include="LinqExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialization\BinarySerialization.cs" />
-    <Compile Include="Serialization\Extensions\BinarySerializationExt.cs" />
-    <Compile Include="Serialization\Extensions\XMLSerializationExt.cs" />
-    <Compile Include="Serialization\XMLSerialization.cs" />
-    <Compile Include="Transition.cs" />
-    <Compile Include="Trie.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CommonLinq\CommonLinq.csproj">
-      <Project>{32F7F676-B4BB-4656-9E3A-88191B0C2383}</Project>
-      <Name>CommonLinq</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
