--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,12 @@
+image: mono:latest
+
 stages:
   - build
 
 build_job:
   stage: build
   script:
-  - ls Common
   - 'echo restoring nuget...'
-  - 'nuget restore Common\Common.sln'
+  - nuget restore Common\Common.sln
   - 'echo building...'
-  - 'msbuild Common\Common.sln /p:Configuration=Debug /p:Platform="Any CPU"'
-  except:
-  - tags
+  - MONO_IOMAP=case xbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" Common\Common.sln
