--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,6 @@ build_job:
   stage: build
   script:
   - 'echo restoring nuget...'
-  - 'nuget restore Common\Common.sln'
+  - 'nuget restore Common/Common.sln'
   - 'echo building...'
-  - 'MONO_IOMAP=case xbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" Common\Common.sln'
+  - 'MONO_IOMAP=case xbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" Common/Common.sln'
