--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,11 +2,29 @@ image: mono:latest
 
 stages:
   - build
+  - test
 
 build_job:
   stage: build
   script:
+  - 'echo BUILDING'
   - 'echo restoring nuget...'
   - 'nuget restore Common/Common.sln'
   - 'echo building...'
   - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" Common/Common.sln'
+  except:
+  - tags
+
+test_job:
+  stage: test
+  script:
+  - 'echo TESTING'
+  - 'echo restoring nuget...'
+  - 'nuget restore Common/Common.sln'
+  - 'echo building...'
+  - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" Common/Common.sln'
+  - 'echo Executing tests for:'
+  - 'ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*'
+  - 'for i in $(ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*); do MONO_IOMAP=case mstest /testcontainer: $i; done'
+  except:
+  - tags
