--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,6 @@ test_job:
   - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" Common/Common.sln'
   - 'echo Executing tests for:'
   - 'ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*'
-  - 'for i in $(ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*); do MONO_IOMAP=case mstest /testcontainer: $i; done'
+  - 'for i in $(ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*); do mstest /testcontainer: $i; done'
   except:
   - tags
