--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,6 @@ test_job:
   - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" Common/Common.sln'
   - 'echo Executing tests for:'
   - 'ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*'
-  - 'for i in $(ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*); do mono ./packages/NUnit.ConsoleRunner.3.2.1/tools/nunit3-console.exe $i; done'
+  - 'for i in $(ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*); do mono nunit-console $i; done'
   except:
   - tags
