--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,17 @@
 image: mono:latest
 
+variables:
+  PROJ_NAME: 'Common'
+
 stages:
   - build
-  - test
 
 build_job:
   stage: build
   script:
-  - 'echo BUILDING'
   - 'echo restoring nuget...'
-  - 'nuget restore Common/Common.sln'
+  - 'nuget restore $(PROJ_NAME)/$(PROJ_NAME).sln'
   - 'echo building...'
-  - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" Common/Common.sln'
-  except:
-  - tags
-
-test_job:
-  stage: test
-  script:
-  - 'echo TESTING'
-  - 'echo restoring nuget...'
-  - 'nuget restore Common/Common.sln'
-  - 'echo building...'
-  - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" Common/Common.sln'
-  - 'echo Executing tests for:'
-  - 'ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*'
-  - 'echo $(MTOOLS)'
-  - 'for i in $(ls bin/Tests/Debug/*.dll | egrep ^*/UnitTestCommon*); do MONO_IOMAP=all nunit3-console $i; done'
+  - 'msbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" $(PROJ_NAME)/$(PROJ_NAME).sln'
   except:
   - tags
