--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,6 @@ build_job:
   - 'echo restoring nuget...'
   - 'nuget restore ${PROJ_NAME}/${PROJ_NAME}.sln'
   - 'echo building...'
-  - 'msbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" ${PROJ_NAME}/${PROJ_NAME}.sln'
+  - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=Debug /p:Platform="Any CPU" ${PROJ_NAME}/${PROJ_NAME}.sln'
   except:
   - tags
