--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,18 @@
 image: mono:latest
 
 variables:
+  PROJ_NAME: 'Common'
   BUILD_CONF: 'Debug'
   RELEASE_CONF: 'Release'
-  PROJ_NAME: 'Common'
+
   UT_PREFIX: 'UnitTestCommon'
+  TEST_REPORT: 'TestResults.txt'
   TEST_RUNNER: 'NUnit.ConsoleRunner'
 
   TEST_RUNNER_W_VER: '${TEST_RUNNER}.3.9.0'
-  PATH_TO_TESTS: 'bin/Tests/${BUILD_CONF}/'
+  PATH_TO_SOLUTION: '${PROJ_NAME}/${PROJ_NAME}.sln'
   PATH_TO_RELEASE: 'bin/Libraries/${RELEASE_CONF}/'
+  PATH_TO_TESTS: 'bin/Tests/${BUILD_CONF}/'
 
 stages:
   - build
@@ -19,8 +22,8 @@ stages:
 build_job:
   stage: build
   script:
-  - 'nuget restore ${PROJ_NAME}/${PROJ_NAME}.sln'
-  - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=${BUILD_CONF} /p:Platform="Any CPU" ${PROJ_NAME}/${PROJ_NAME}.sln'
+  - 'nuget restore ${PATH_TO_SOLUTION}'
+  - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=${BUILD_CONF} /p:Platform="Any CPU" ${PATH_TO_SOLUTION}'
   cache:
     key: binaries
     paths:
@@ -49,20 +52,22 @@ test_job:
   # 3. Removes output run settings information
   # 4. Removes footer
   # 5. Writes to file
-  - 'touch TestResults.txt'
-  - for i in $(ls ${PATH_TO_TESTS}*.dll | egrep ^*/${UT_PREFIX}*); do mono tools/nunit3-console.exe $i | awk '/Test Files/'{f=1}f{print} | awk -v regex="Run Settings" -v count="8"  '$0 ~ regex { skip=count; next } --skip >= 0 { next } 1' | head -n -1 >> TestResults.txt; done
+  - 'touch ${TEST_REPORT}'
+  - for i in $(ls ${PATH_TO_TESTS}*.dll | egrep ^*/${UT_PREFIX}*); do mono tools/nunit3-console.exe $i | awk '/Test Files/'{f=1}f{print} | awk -v regex="Run Settings" -v count="8"  '$0 ~ regex { skip=count; next } --skip >= 0 { next } 1' | head -n -1 >> ${TEST_REPORT}; done
+  - cat ${TEST_REPORT}
   artifacts:
     paths:
-    - 'TestResults.txt'
+    - '${TEST_REPORT}'
     expire_in: 1 day
+    when: always
   except:
   - tags
 
 release_job:
  stage: release
  script:
-  - 'nuget restore ${PROJ_NAME}/${PROJ_NAME}.sln'
-  - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=${RELEASE_CONF} /p:Platform="Any CPU" ${PROJ_NAME}/${PROJ_NAME}.sln'
+  - 'nuget restore ${PATH_TO_SOLUTION}'
+  - 'MONO_IOMAP=case msbuild /t:Build /p:Configuration=${RELEASE_CONF} /p:Platform="Any CPU" ${PATH_TO_SOLUTION}'
   - 'rm ${PATH_TO_RELEASE}*.pdb'
  artifacts:
    paths:
