--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,36 +95,35 @@ build_job_core:
   except:
   - tags
 
-test_job_core:
-  stage: test
-  cache:
-    key: binaries
-    paths:
-    - '${PATH_TO_CORE_TESTS}'
-    policy: pull
-  script:
-  - 'apt-get -qq update -y'
-  - 'apt-get -qq install unzip'
-  - 'nuget install ${TEST_RUNNER}'
-  - 'unzip ${TEST_RUNNER_W_VER}/${TEST_RUNNER_W_VER}.nupkg'
-  - 'chmod -R 777 tools'
-
-  # Black magic.png
-  # 1. Runs testing for each .dll file
-  # 2. Removes output header information
-  # 3. Removes output run settings information
-  # 4. Removes footer
-  # 5. Writes to file
-  - 'touch ${TEST_REPORT}'
-  - for i in $(ls ${PATH_TO_CORE_TESTS}*.dll | egrep ^*/${UT_PREFIX}*); do mono tools/nunit3-console.exe $i | awk '/Test Files/'{f=1}f{print} | awk -v regex="Run Settings" -v count="8"  '$0 ~ regex { skip=count; next } --skip >= 0 { next } 1' | head -n -1 >> ${TEST_REPORT}; done
-  - cat ${TEST_REPORT}
-  artifacts:
-    paths:
-    - '${TEST_REPORT}'
-    expire_in: 1 day
-    when: always
-  except:
-  - tags
+# test_job_core:
+#   stage: test
+#   cache:
+#     key: binaries
+#     paths:
+#     - '${PATH_TO_CORE_TESTS}'
+#     policy: pull
+#   script:
+#   - 'apt-get -qq update -y'
+#   - 'apt-get -qq install unzip'
+#   - 'nuget install ${TEST_RUNNER}'
+#   - 'unzip ${TEST_RUNNER_W_VER}/${TEST_RUNNER_W_VER}.nupkg'
+#   - 'chmod -R 777 tools'
+#   # Black magic.png
+#   # 1. Runs testing for each .dll file
+#   # 2. Removes output header information
+#   # 3. Removes output run settings information
+#   # 4. Removes footer
+#   # 5. Writes to file
+#   - 'touch ${TEST_REPORT}'
+#   - for i in $(ls ${PATH_TO_CORE_TESTS}*.dll | egrep ^*/${UT_PREFIX}*); do mono tools/nunit3-console.exe $i | awk '/Test Files/'{f=1}f{print} | awk -v regex="Run Settings" -v count="8"  '$0 ~ regex { skip=count; next } --skip >= 0 { next } 1' | head -n -1 >> ${TEST_REPORT}; done
+#   - cat ${TEST_REPORT}
+#   artifacts:
+#     paths:
+#     - '${TEST_REPORT}'
+#     expire_in: 1 day
+#     when: always
+#   except:
+#   - tags
 
 release_job_core:
  stage: release
