--- a/CommonCore/CommonMath/CommonMath.csproj
+++ b/CommonCore/CommonMath/CommonMath.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Denis\Source\Repos\Common\CommonCore\CommonMath\CommonMath.xml</DocumentationFile>
+    <DocumentationFile></DocumentationFile>
     <OutputPath>..\..\binCore\Libraries\Debug</OutputPath>
   </PropertyGroup>
 
@@ -18,6 +18,21 @@
 
   <ItemGroup>
     <None Remove="CommonMath.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="..\..\Common\CommonMath\INumberInRange.cs" Link="INumberInRange.cs" />
+    <Compile Include="..\..\Common\CommonMath\LongestLong.cs" Link="LongestLong.cs" />
+    <Compile Include="..\..\Common\CommonMath\Matricies\BaseMatrix.cs" Link="Matricies\BaseMatrix.cs" />
+    <Compile Include="..\..\Common\CommonMath\Matricies\IMatrix.cs" Link="Matricies\IMatrix.cs" />
+    <Compile Include="..\..\Common\CommonMath\Matricies\Matrix.cs" Link="Matricies\Matrix.cs" />
+    <Compile Include="..\..\Common\CommonMath\Matricies\ModuloMatrix.cs" Link="Matricies\ModuloMatrix.cs" />
+    <Compile Include="..\..\Common\CommonMath\NumberInRange.cs" Link="NumberInRange.cs" />
+    <Compile Include="..\..\Common\CommonMath\UniversalNumericOperation.cs" Link="UniversalNumericOperation.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Matricies\" />
   </ItemGroup>
 
 </Project>
