--- a/Common/CommonData/CommonData.csproj
+++ b/Common/CommonData/CommonData.csproj
@@ -45,9 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dfa.cs" />
+    <Compile Include="BaseDfa.cs" />
     <Compile Include="DfaMinimizer.cs" />
-    <Compile Include="PatternFinder.cs" />
+    <Compile Include="IGraph.cs" />
+    <Compile Include="PatternGenerator.cs" />
     <Compile Include="FileMan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\BinarySerialization.cs" />
