Upgrade CommonCore to C#7.1

--- a/CommonCore/CommonMath/CommonMath.csproj
+++ b/CommonCore/CommonMath/CommonMath.csproj
@@ -5,6 +5,7 @@
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <RootNamespace>Common.Math</RootNamespace>
     <SignAssembly>false</SignAssembly>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
