--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-
 variables:
   PROJ_NAME: 'Common'
   PROJ_CORE_NAME: 'CommonCore'
@@ -115,10 +114,8 @@ release_job_core:
  when: manual
  
 test_job_cpp:
-  image: frolvlad/alpine-gxx
+  image: madduci/docker-linux-cpp
   stage: test
   script:
-  - 'apt-get -qq update -y'
-  - 'apt-get install -y cmake'
   - 'cd ${PATH_TO_CPP_TESTS}'
   - 'for i in $(ls -d */); do cmake $i; make -C $i; ./$i$(ls | egrep ^UnitTestCommon[A-Z][a-z]*[^\.]$); done'
