--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -114,10 +114,15 @@ release_job_core:
  when: manual
  
 test_job_cpp:
-  image: frolvlad/alpine-gxx
+  image: ubuntu
   stage: test
   script:
-  - 'apk update'
-  - 'apk add cmake'
+  - 'apt-get update'
+  - 'apt-get install -y cmake'
+  - 'apt-get install -y software-properties-common'
+  - 'add-apt-repository ppa:ubuntu-toolchain-r/test'
+  - 'apt-get update'
+  - 'apt install g++-7 -y'
+  - 'update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 60 --slave /usr/bin/g++ g++ /usr/bin/g++-7'
   - 'cd ${PATH_TO_CPP_TESTS}'
   - 'for i in $(ls -d */); do cmake $i; make -C $i; ./$i$(ls | egrep ^UnitTestCommon[A-Z][a-z]*[^\.]$); done'
