[skip ci] Add BaseMatrix

--- a/CommonCpp/CommonMath/CommonMath.vcxproj
+++ b/CommonCpp/CommonMath/CommonMath.vcxproj
@@ -117,6 +117,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BaseMatrix.hpp" />
+    <ClInclude Include="Matrix.hpp" />
     <ClInclude Include="NumberInRange.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
