--- a/CommonCpp/CommonMath/CommonMath.vcxproj.filters
+++ b/CommonCpp/CommonMath/CommonMath.vcxproj.filters
@@ -13,10 +13,19 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Matricices">
+      <UniqueIdentifier>{a0eec28b-6ebf-4ddb-9c02-9a82fa6921ea}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NumberInRange.hpp">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BaseMatrix.hpp">
+      <Filter>Header Files\Matricices</Filter>
+    </ClInclude>
+    <ClInclude Include="Matrix.hpp">
+      <Filter>Header Files\Matricices</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
