--- a/Common/CommonData/CommonData.csproj
+++ b/Common/CommonData/CommonData.csproj
@@ -50,12 +50,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RegEx\Alternation.cs" />
     <Compile Include="BaseDfa.cs" />
+    <Compile Include="RegEx\Conjunction.cs" />
     <Compile Include="DfaMinimizer.cs" />
     <Compile Include="IGraph.cs" />
+    <Compile Include="RegEx\IReduceable.cs" />
+    <Compile Include="RegEx\Literal.cs" />
     <Compile Include="PatternGenerator.cs" />
     <Compile Include="FileMan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegEx\RegularExpression.cs" />
     <Compile Include="Serialization\BinarySerialization.cs" />
     <Compile Include="Serialization\Extensions\BinarySerializationExt.cs" />
     <Compile Include="Serialization\Extensions\XMLSerializationExt.cs" />
