Try fix CommonCpp compilation error

--- a/CommonCpp/Tests/UnitTestCommonMath/CMakeLists.txt
+++ b/CommonCpp/Tests/UnitTestCommonMath/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 
 set(CMAKE_BUILD_TYPE Test)
-set(CMAKE_CXX_FLAGS "-std=gnu++1z")
-
+set(CMAKE_CXX_FLAGS "-std=gnu++1z -Wall -Wextra -pedantic -Wno-long-long -g")
 project(UnitTestCommonMath)
 
 add_executable(
